# netviz-iactive-

./: .gitignore  README.md  canvas_manager.py  example.py  example2.py  example3.py  example5.py  hello.py  main.py  overview.md  pyproject.toml
.notes/: cl17_analysis.md
charts/: betweenness_centrality.py  cluster_alluvial.py  cluster_chord.py  cluster_distribution.py  cluster_heatmap.py  cluster_sankey.py  connection_anomaly.py  connection_distribution.py  critical_structure.py  information_flow.py  interlayer_graph.py  layer_activity.py  layer_communities.py  layer_connectivity.py  layer_coupling.py  layer_influence.py  layer_similarity.py  node_connections.py
data/: data_loader.py  data_loader_old.py  network_builder.py  network_builder_alt.py  network_data_manager.py
inputdata/: .~lock.Congenital Muscular Dystrophies_Multiplex_Network.csv#  1 Immunodeficiencies affecting cellular and humoral immunity_Multiplex_Metadata.tsv  1 Immunodeficiencies affecting cellular and humoral immunity_Multiplex_Network.tsv  2 Combined immunodeficiencies with associated or syndromic features_Multiplex_Metadata.tsv  2 Combined immunodeficiencies with associated or syndromic features_Multiplex_Network.tsv  3 Predominantly Antibody Deficiencies_Multiplex_Metadata.tsv  3 Predominantly Antibody Deficiencies_Multiplex_Network.tsv  4 Diseases of Immune Dysregulation_Multiplex_Metadata.tsv  4 Diseases of Immune Dysregulation_Multiplex_Network.tsv  5 Congenital defects of phagocyte number or function_Multiplex_Metadata.tsv  5 Congenital defects of phagocyte number or function_Multiplex_Network.tsv  6 Defects in intrinsic and innate immunity_Multiplex_Metadata.tsv  7 Autoinflammatory Disorders_Multiplex_Metadata.tsv  (+16 more)
(+141 files in other folders)
