[project]
name = "netviz-interactive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fa2-modified>=0.3.10",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    # "pyobjc-framework-quartz>=11.0",
    "pyopengl>=3.1.9",
    "pyqt5>=5.15.11",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
    "vispy>=0.14.3",
]
