[project]
name = "netviz-interactive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepgraph",
    "fa2-modified",
    "importlib",
    "ipykernel",
    "leidenalg",
    "matplotlib",
    "networkx",
    "numpy",
    "pandas",
    # "pyobjc-framework-quartz>=11.0",
    "pyopengl",
    "pyqt5",
    "python-louvain",
    "scikit-learn",
    "scipy",
    "tqdm",
    "vispy",
]


[tool.uv]
# uncomment next line on Windows
# constraint-dependencies = ["pyqt5-qt5 <=5.15.2"]

